# Quantum-Korea-Hackathon-2024

./: .gitignore  README.md  bench.sh  log.txt  my_test.ipynb  pyproject.toml  requirements.txt  run.py  test.ipynb  utils.py
bruteforce_scores/: mut_scores_10.json  mut_scores_11.json  mut_scores_12.json  mut_scores_13.json  mut_scores_14.json  mut_scores_15.json  mut_scores_3.json  mut_scores_4.json  mut_scores_5.json  mut_scores_6.json  mut_scores_7.json  mut_scores_8.json  mut_scores_9.json
genetic/: __init__.py
meta_sabre/: meta_sabre_swap.py  new_meta_sabre_swap.py  sabre_swap.py  temp.py
qkh2024/: grader.py
qkh2024/working/: grader.ipynb  utils.py
score_machine/: mutant.py
src/meta_sabre_plugin/: __init__.py
src/my_qiskit_plugin/: __init__.py
src/my_qiskit_plugin2/: __init__.py
