[project]
name = "example_project"
version = "0.1.0"
description = "An example project"

[project.entry-points."qiskit.transpiler.layout"] 
"vf10" = "my_qiskit_plugin:VF2LayoutPlugin"

[project.entry-points."qiskit.transpiler.routing"]
"msabre" = "meta_sabre_plugin:MetaSabreSwapPlugin"
"bsabre" = "my_qiskit_plugin2:BaseSabreSwapPlugin"
